updated package in cargo toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "evmm"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
-
+authors = ["0xKitsune"]
+license = "MIT"
+description = "A  framework for writing barebones, hand tuned smart contracts in pure opcodes."
+readme = "README.md"
+homepage = "https://github.com/0xKitsune/EVM_Mneumonic"
+repository = "https://github.com/0xKitsune/EVM_Mneumonic"
+keywords = ["cli", "ethereum", "smart contract", "assembly"]
+categories = ["command-line-utilities", "compiler"]
 
 [dependencies]
 pest = "2.0"
