--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 authors = ["0xKitsune"]
 license = "MIT"
-description = "A  framework for writing barebones, hand tuned smart contracts in pure opcodes."
+description = "A barebones framework for hand tuned smart contracts in pure opcodes."
 readme = "README.md"
 homepage = "https://github.com/0xKitsune/EVM_Mneumonic"
 repository = "https://github.com/0xKitsune/EVM_Mneumonic"
